...
    @DrawableRes val CaretRight = R.drawable.ic_sl_caret_right
    @DrawableRes val Check = R.drawable.ic_sl_check
    @DrawableRes val CheckCircle = R.drawable.ic_sl_check_circle
    @DrawableRes val CheckFat = R.drawable.ic_sl_check_fat
    @DrawableRes val Circle = R.drawable.ic_sl_circle
    @DrawableRes val Copy = R.drawable.ic_sl_copy
    @DrawableRes val Customers = R.drawable.ic_sl_customers
    @DrawableRes val Delete = R.drawable.ic_sl_delete
    @DrawableRes val Disclosure = R.drawable.ic_sl_disclosure
    @DrawableRes val Dropdown = R.drawable.ic_sl_dropdown
    @DrawableRes val Equipment = R.drawable.ic_sl_equipment
    @DrawableRes val Error = R.drawable.ic_sl_error
    @DrawableRes val Expand = R.drawable.ic_sl_expand
...
